[build-system]
requires = ["flit_core >=3.9.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "yoke"
description = "Sets of models and datasets with training and evaluation scripts."
version = "0.0.0"
authors = [
    {name = "Hickmann, Kyle", email = "hickmank@lanl.gov"},
    {name = "Callis, Skylar", email = "sjcallis@lanl.gov"},
    {name = "Egozi, Gal", email = "galgal@lanl.gov"},
    {name = "De, Soumi", email = "soumide@lanl.gov"},
    {name = "Kaiser, Bryan", email = "bkaiser@lanl.gov"},	
    {name = "Pandit, Sourabh", email = "spandit@lanl.gov"},
    {name = "Chakrabarti, Sharmistha", email = "schakrabarti@lanl.gov"},
    {name = "Armstrong, Derek", email = "dearmstr@lanl.gov"},
    {name = "Henrick, Andrew", email = "ahenrick@lanl.gov"},
    {name = "Schodt, David", email = "dschodt@lanl.gov"}
]
# NOTE: The PyTorch package through `conda` is `pytorch`, through
# `pip` (and therefore `flit`) it is `torch`. Since `yoke` primarily
# is used through `conda` environments we'll handle the PyTorch
# dependencies separately.
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "scikit-image",
    "matplotlib>=3.10.7",
    "pyparsing<3.3",
    "h5py",
    "pandas",
    "einops",
    "lightning",
    ]
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = ["Private :: Do Not Upload",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "coverage"]
dev = ["ruff"]
docs = ["sphinx", "furo"]
ci = ["coveralls"]

[project.urls]
Source = "https://github.com/lanl/Yoke"

[tool.ruff]
line-length = 89
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 89

[tool.ruff.lint]
select = [
    "E",
    "F",
    "D",
    "UP",
    "W",
    "ANN"]
#ignore = ["ANN101"]  # Wants a `type` defined for `self` argument!

[tool.ruff.lint.pydocstyle]
convention = "google"

# Allow exclusion of specific lines in coverage report
[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",   
]